--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,22 @@
+---
 stages:
   - build
   - test
   - deploy
-
 build-job:
   stage: build
   script:
     - echo "Building the project..."
-    - # Add your build commands here
-
+    - null
 test-job:
   stage: test
   script:
     - echo "Running tests..."
-    - # Add your test commands here
-
+    - null
 deploy-job:
   stage: deploy
   script:
     - echo "Deploying the project..."
-    - # Add your deployment commands here
+    - null
   only:
     - master
