--- a/module2/build.gradle
+++ b/module2/build.gradle
@@ -9,15 +9,18 @@ application {
 
 dependencies {
     // JUnit for testing
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
-    // Jackson for JSON processing
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+}
 
+test {
+    useJUnitPlatform()
+}
 
-    // SLF4J API for logging
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-
-    // SLF4J Simple binding for logging
-    runtimeOnly 'org.slf4j:slf4j-simple:1.7.36'
+jacocoTestReport {
+    reports {
+        xml.required.set(true)
+        html.required.set(true)
+    }
 }
