--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,20 @@ sonarqube {
 //        property "sonar.qualitygate.wait", true
         property "sonar.organization", "your-organization" // not used?
         property "sonar.host.url", "http://localhost:9000"
-        property "sonar.login", "sqp_47b4be7edf94ee1462df5fdfb3dee511a9ec01dd"
-        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.token", "sqp_47b4be7edf94ee1462df5fdfb3dee511a9ec01dd"
+//        property "sonar.inclusions", "module2/src/main/java/com/example/module2/HelloModule2.java"
+//        property "sonar.coverage.jacoco.xmlReportPaths", "regexp:/src/.*\\.java"
+//        property "sonar.issue.ignore.allfile", "**/*.java"
+//        property "sonar.issue.ignore.allfile", "**/*"
+//        property "sonar.exclusions", "**"
+        // Disable issue detection by excluding all issues with a catch-all regex
+//        property "sonar.issue.ignore.block", """
+//            {
+//                "key": "ignore_all",
+//                "baseDir": ".",
+//                "startBlockRegexp": ".*",
+//                "endBlockRegexp": ".*"
+//            }
+//            """
     }
 }
