--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,22 @@
-build-job:
-  stage: build
-  script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+stages:
+  - diff
 
-test-job1:
-  stage: test
-  script:
-    - echo "This job tests something"
+variables:
+  SOURCE_BRANCH: "test"    # Replace with your source branch
+  TARGET_BRANCH: "main"    # Replace with your target branch
 
-test-job2:
-  stage: test
-  script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
+before_script:
+  - apt-get update -y
+  - apt-get install -y git
 
-deploy-prod:
-  stage: deploy
+diff_job:
+  stage: diff
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-  environment: production
+    - echo "Fetching the latest changes..."
+    - git fetch origin
+    - echo "Switching to target branch: $TARGET_BRANCH"
+    - git checkout $TARGET_BRANCH
+    - echo "Fetching the source branch: $SOURCE_BRANCH"
+    - git fetch origin $SOURCE_BRANCH:$SOURCE_BRANCH
+    - echo "Displaying the diff between $SOURCE_BRANCH and $TARGET_BRANCH"
+    - git diff origin/$SOURCE_BRANCH
