--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ diff_job:
     - echo "Fetching the source branch: $SOURCE_BRANCH"
     - git fetch origin $SOURCE_BRANCH:$SOURCE_BRANCH
     - echo "Displaying the diff between $SOURCE_BRANCH and $TARGET_BRANCH"
-    - git diff origin/$SOURCE_BRANCH
+    - git diff remotes/origin/$SOURCE_BRANCH remotes/origin/$TARGET_BRANCH
