Trying to build the project using gradle#2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
 before_script:
   - apt-get update -y
   - apt-get install -y git
+   - apt-get install -y openjdk-17-jdk  # Example for installing OpenJDK 17
 
 diff_job:
   stage: diff
