--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - diff
-  - build
   - instrument
+  - build
 
 variables:
   SOURCE_BRANCH: "test"    # Replace with your source branch
@@ -21,6 +21,14 @@ diff_job:
     - echo "Displaying the diff between $SOURCE_BRANCH and $TARGET_BRANCH"
     - git diff remotes/origin/$TARGET_BRANCH remotes/origin/$SOURCE_BRANCH -- '*.java'
 
+instrument_job:
+  stage: instrument
+  tags:
+    - SonarQube 
+  script:
+    - echo "Running Python script to instrument code..."
+    - python3 InstrumentingCode.py
+
 build_job:
   stage: build
   tags:
@@ -29,11 +37,5 @@ build_job:
     - echo ${CI_PROJECT_DIR}
     - echo "Building the project..."
     - ./gradlew clean build --info
-
-instrument_job:
-  stage: instrument
-  tags:
-    - SonarQube 
-  script:
-    - echo "Running Python script to instrument code..."
-    - python3 InstrumentingCode.py
+    - echo "Running SonarQube Analysis"
+    - ./gradlew sonar --info
