--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,11 @@ complete_job:
     - git fetch origin $SOURCE_BRANCH
     - echo "Switching to source branch test"
     - git checkout $SOURCE_BRANCH
+    - echo "Pulling source branch"
+    - git pull origin $SOURCE_BRANCH
     - echo "Fetching the target branch main"
     - git fetch origin $TARGET_BRANCH
-    - echo "Displaying the diff between $SOURCE_BRANCH and $TARGET_BRANCH"
+    - echo "Displaying the diff between $TARGET_BRANCH and $SOURCE_BRANCH"
     - git diff remotes/origin/$TARGET_BRANCH remotes/origin/$SOURCE_BRANCH -- '*.java'
     - echo ${CI_PROJECT_DIR}
     - echo "Building the project..."
